--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -12,7 +12,7 @@
 						{{ form|crispy }}
 						<input type="submit" value="Register" class="btn btn-primary">
 					</form>
-					<p class="text-center">If you already have an account, <a href="{% url 'login' %}">login</a>, instead</p>
+					<p class="text-center">If you already have an account, <a href="{% url 'accounts:login' %}">login</a>, instead</p>
 				</div>
 			</div>
 		</div>
