--- a/templates/base.html
+++ b/templates/base.html
@@ -13,8 +13,9 @@
 <body>
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-sm-2">
+			<div class="col-sm-1">
 				{% block sidebar %}
+					{% include 'includes/sidebar.html' %}
 				{% endblock %}
 			</div>
 			<div class="col-sm-10">
@@ -23,6 +24,8 @@
 			</div>
 		</div>
 	</div>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
