--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,20 +1,27 @@
 {% extends 'base_account.html' %}
 {% load crispy_forms_filters %}
 
+{% block title %}
+    <title>Register</title>
+{% endblock %}
+
 {% block content %}
-	<div class="container h-100">
-		<div class="row h-100 justify-content-center align-items-center">
-			<div class="col-10 col-md-8 col-lg-6">
-				<div class="container py-5">
-					<h2>Register</h2>
-					<form method="post">
-						{% csrf_token %}
-						{{ form|crispy }}
-						<input type="submit" value="Register" class="btn btn-primary">
-					</form>
-					<p class="text-center">If you already have an account, <a href="{% url 'accounts:login' %}">login</a>, instead</p>
-				</div>
-			</div>
-		</div>
-	</div>
+    <div class="d-flex justify-content-center align-items-center min-vh-100">
+        <div class="card p-3 shadow-lg">
+            <h2 class="text-center mb-3">Register</h2>
+            <form method="post" class="form-signin border border-primary rounded p-4">
+                {% csrf_token %}
+                {{ form|crispy }}
+
+                <div class="text-center mt-3">
+                    <button type="submit" class="btn btn-primary w-100">Register</button>
+                </div>
+
+                <div class="text-center mt-3">
+                    <p>Already have an account?</p>
+                    <a href="{% url 'accounts:login' %}" class="btn btn-link">Login</a>
+                </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
