--- a/templates/base.html
+++ b/templates/base.html
@@ -1,31 +1,23 @@
 <!doctype html>
 <html lang="en">
 <head>
-	{% block title %}<title>To-Do List</title>{% endblock %}
-	<meta charset="UTF-8">
-	<meta name="viewport"
-				content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+   	{% block title %}<title>To-Do List</title>{% endblock %}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 	{% load static %}
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 </head>
 
 <body>
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-sm-1">
-				{% block sidebar %}
-					{% include 'includes/sidebar.html' %}
-				{% endblock %}
-			</div>
-			<div class="col-sm-10">
-				{% block content %}
-				{% endblock %}
-			</div>
-		</div>
-	</div>
+		{% block navbar %}
+			{% include 'includes/navbar.html' %}
+		{% endblock %}
+    <div class="container-fluid">
+			{% block content %}
+			{% endblock %}
+    </div>
 
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
