--- a/templates/base_account.html
+++ b/templates/base_account.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -6,16 +7,16 @@
 	<meta name="viewport"
 				content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	{% load static %}
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 </head>
-
 <body>
-	<div class="container-fluid">
-		<div class="row">
-			{% block content %}
-			{% endblock %}
-		</div>
+	<div class="container-fluid d-flex justify-content-center align-items-center" style="height: 100vh;">
+			<div class="row w-100">
+					<div class="col-12 col-md-6 col-lg-4 mx-auto">
+							{% block content %}
+							{% endblock %}
+					</div>
+			</div>
 	</div>
 </body>
 
