--- a/templates/base.html
+++ b/templates/base.html
@@ -1,24 +1,30 @@
 <!doctype html>
 <html lang="en">
-<head>
-   	{% block title %}<title>To-Do List</title>{% endblock %}
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <head>
+    {% block title %}
+    <title>To-Do List</title>
+    {% endblock %}
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-	{% load static %}
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-</head>
+    {% load static %}
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+  </head>
 
-<body>
-		{% block navbar %}
-			{% include 'includes/navbar.html' %}
-		{% endblock %}
-    <div class="container-fluid">
-			{% block content %}
-			{% endblock %}
-    </div>
-		<script src="https://unpkg.com/htmx.org@1.1.0"></script>
+  <body>
+    {% block navbar %} {% include 'includes/navbar.html' %} {% endblock %}
+    <div class="container-fluid">{% block content %} {% endblock %}</div>
+    <script src="https://unpkg.com/htmx.org@1.1.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+  </body>
 </html>
