--- a/templates/todo_list/task_toggle_status.html
+++ b/templates/todo_list/task_toggle_status.html
@@ -1,10 +1,17 @@
 <form method="post" action="{% url 'todo:toggle-status' pk=task.id %}">
-	{% csrf_token %}
-		{% if task.is_completed %}
-			<span class="text-success">✔</span>
-			<input type="submit" class="btn btn-danger float-end" value="Mark as Incomplete">
-    {% else %}
-			<span class="text-danger">✖</span>
-			<input type="submit" class="btn btn-success float-end" value="Mark as Completed">
-    {% endif %}
+  {% csrf_token %} {% if task.is_completed %}
+  <span class="text-success">✔</span>
+  <input
+    type="submit"
+    class="btn btn-danger float-end"
+    value="Mark as Incomplete"
+  />
+  {% else %}
+  <span class="text-danger">✖</span>
+  <input
+    type="submit"
+    class="btn btn-success float-end"
+    value="Mark as Completed"
+  />
+  {% endif %}
 </form>
