reformat template blocks

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,7 +1,7 @@
 {% extends 'base_account.html' %} {% load crispy_forms_filters %} {% block title
 %}
 <title>Register</title>
-{% endblock %} {% block content %}
+{% block content %}
 <div class="d-flex justify-content-center align-items-center min-vh-100">
   <div class="card p-3 shadow-lg">
     <h2 class="text-center mb-3">Register</h2>
