--- a/templates/todo_list/index.html
+++ b/templates/todo_list/index.html
@@ -1,5 +1,6 @@
-{% extends 'base.html' %} {% block title %}<title>To-Do App - Home</title>{%
-endblock %} {% block content %}
+{% extends 'base.html' %}
+{% block title %}<title>To-Do App - Home</title>{% endblock %}
+{% block content %}
 <div class="container mt-4">
   <h1 class="text-center mb-4">Welcome to the To-Do App</h1>
   <p class="text-center mb-5">
