--- a/templates/todo_list/task_list.html
+++ b/templates/todo_list/task_list.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% load crispy_forms_filters %} {% block content %}
+{% extends 'base.html' %}
+{% load crispy_forms_filters %}
+{% block content %}
 <div class="d-flex justify-content-between align-items-center">
   <div>
     <form method="get">
