--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,7 +1,7 @@
 {% extends 'base_account.html' %} {% load crispy_forms_filters %} {% block title
 %}
 <title>Login</title>
-{% endblock %} {% block content %}
+{% block content %}
 <div class="d-flex justify-content-center align-items-center min-vh-100">
   <div class="card p-4 shadow-lg" style="max-width: 500px; width: 100%">
     <h2 class="text-center mb-4">Login</h2>
