--- a/templates/accounts/team_list.html
+++ b/templates/accounts/team_list.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %}
+{% block content %}
 <div class="container mt-4">
   <h1 class="text-center">Your Teams</h1>
 
