--- a/templates/todo_list/task_detail.html
+++ b/templates/todo_list/task_detail.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %}
+{% block content %}
 <div class="row justify-content-center">
   <div class="col-lg-8 col-md-10 col-sm-12">
     <div class="card shadow-lg data-card">
