--- a/templates/todo_list/task_form.html
+++ b/templates/todo_list/task_form.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% load crispy_forms_filters %} {% block content %}
+{% extends 'base.html' %}
+{% load crispy_forms_filters %}
+{% block content %}
 <div class="container mt-5">
   <div class="row justify-content-center">
     <div class="col-md-8">
