--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -31,6 +31,13 @@
             >Tasks</a
           >
         </li>
+				<li class="nav-item">
+          <a
+            class="nav-link {% if request.resolver_match.url_name == 'task-list' %}active{% endif %}"
+            href="{% url 'todo:project-list' %}"
+            >Projects</a
+          >
+        </li>
         <li class="nav-item">
           <a
             class="nav-link {% if request.resolver_match.url_name == 'team-list' %}active{% endif %}"
