--- a/templates/todo_list/task_list.html
+++ b/templates/todo_list/task_list.html
@@ -1,18 +1,18 @@
 {% extends 'base.html' %}
 {% load crispy_forms_filters %}
 {% block content %}
-<div class="d-flex justify-content-between align-items-center">
-  <div>
-    <form method="get">
-      {{ search_form|crispy }}
-      <input type="submit" value="Search" class="btn btn-secondary" />
-    </form>
-  </div>
-  <div>
-    <a href="{% url 'todo:task-create' %}" class="btn btn-primary">
-      Create Task
-    </a>
-  </div>
+<div class="d-flex justify-content-between align-items-center mb-2">
+	<div>
+		<form method="get">
+			{{ search_form|crispy }}
+			<input type="submit" value="Search" class="btn btn-secondary" />
+		</form>
+	</div>
+	<div>
+		<a href="{% url 'todo:task-create' %}" class="btn btn-primary">
+			Create Task
+		</a>
+	</div>
 </div>
 {% if object_list %}
 <table class="table">
@@ -70,5 +70,7 @@
   </tbody>
 </table>
 {% else %}
-<p class="text-center text-muted my-4">There are no tasks</p>
+	<div class="alert alert-warning text-center" role="alert">
+		No tasks found.
+	</div>
 {% endif %} {% endblock %}
