--- a/templates/todo_list/project_confirm_delete.html
+++ b/templates/todo_list/project_confirm_delete.html
@@ -6,9 +6,9 @@
       <h2 class="text-center text-danger">
         Are you sure you want to delete this project?
       </h2>
-			<h3 class="card-title">{{ project.title }}</h3>
+			<h3 class="card-title">{{ project.name }}</h3>
 			<p><strong>Description:</strong> {{ project.description }}</p>
-			<p><strong>Created by:</strong> {{ project.creator }}</p>
+			<p><strong>Status:</strong> {{ project.status }}</p>
       <div class="d-flex justify-content-between mt-4">
         <form method="post" class="d-inline">
           {% csrf_token %}
