Update accounts and todo_list models, views, and templates | add objects quantity to the home view context

--- a/templates/accounts/team_list.html
+++ b/templates/accounts/team_list.html
@@ -39,7 +39,7 @@
 						</td>
 						<td>
 							<div class="d-flex align-items-center">
-								<span class="text-capitalize">{{ team.owner.username }}</span>
+								<span class="text-capitalize">{{ team.created_by.username }}</span>
 							</div>
 						</td>
 						<td>
