--- a/templates/todo_list/project_list.html
+++ b/templates/todo_list/project_list.html
@@ -41,7 +41,7 @@
 						</td>
 						<td>
 							<div class="d-flex align-items-center">
-								<span class="text-capitalize">{{ project.owner.username }}</span>
+								<span class="text-capitalize">{{ project.created_by.username }}</span>
 							</div>
 						</td>
 						<td>
