remove base_account layout and refactor related templates

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,6 +1,6 @@
-{% extends 'base_account.html' %} {% load crispy_forms_filters %} {% block title
-%}
-<title>Register</title>
+{% extends 'base.html' %}
+{% load crispy_forms_filters %}
+{% block title %} <title>Register</title> {% endblock %}
 {% block content %}
 <div class="d-flex justify-content-center align-items-center min-vh-100">
   <div class="card p-3 shadow-lg">
