--- a/templates/todo_list/project_detail.html
+++ b/templates/todo_list/project_detail.html
@@ -1,1 +1,6 @@
-{% include 'todo_list/task_list.html' with object_list=tasks search_form=search_form %}
+{% extends 'base.html' %}
+
+{% block content %}
+
+{% endblock %}
+
