--- a/templates/base.html
+++ b/templates/base.html
@@ -24,11 +24,14 @@
 
   <body>
     {% block navbar %} {% include 'includes/navbar.html' %} {% endblock %}
-    <div class="container-fluid">{% block content %} {% endblock %}</div>
+		<div class="container-fluid">{% block content %} {% endblock %}</div>
     <script src="https://unpkg.com/htmx.org@1.1.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 		<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 		<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-  </body>
+  	{% block pagination %}
+			{% include "includes/pagination.html" %}
+		{% endblock %}
+	</body>
 	{% block footer %} {% include 'includes/footer.html' %} {% endblock %}
 </html>
